Building darwin, linux binaries | Noel

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
  push:
    tags:
      - v*
-   branches: [ "master" ]
+   branches: [ "main" ]
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
