--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ on:
     branches: [ "main" ]
 jobs:
   build:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     name: Go ${{ matrix.go }} sample
     steps:
       - uses: actions/checkout@master
